--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
     "express": "^4.18.2",
     "socket.io": "^4.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "node-telegram-bot-api": "^0.64.0",
+    "crypto": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
