--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,14 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "config": "node -e \"const config = require('./config'); config.printConfig();\"",
+    "test-config": "node -e \"console.log('Testing config...'); const config = require('./config'); console.log('✅ Config loaded successfully');\""
   },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "node-telegram-bot-api": "^0.64.0",
     "crypto": "^1.0.1"
   },
